search icon align corrected

--- a/style.css
+++ b/style.css
@@ -322,7 +322,7 @@ footer span:last-child:hover {
 .fa-search {
     position: absolute;
     left: 17%;
-    top: 96%;
+    top: 103.5vh;
 }
 
 .input-puntaje {
